<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".Cruds.CrudMedicacaoActivity">

    <TextView
        android:id="@+id/txt_title_crud_medicacao"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#263238"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_crud_medicacao"/>

    <TextView
        android:id="@+id/txt_subtitle_crud_frequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/crud_medicacao_title"
        android:textSize="@dimen/secondary_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_crud_medicacao" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_nome_medicamento"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitle_crud_frequencia"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_nome"
        android:background="@drawable/bkg_border"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_dosagem_medicamento"
        app:layout_constraintTop_toBottomOf="@id/input_nome_medicamento"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_dosagem"
        android:background="@drawable/bkg_border"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Spinner
        android:id="@+id/cmb_frequencia_medicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        app:layout_constraintTop_toBottomOf="@id/input_dosagem_medicamento"
        android:layout_marginTop="10dp"
        android:background="@drawable/bkg_border"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btn_finalizar_crud_medicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_finalizar"
        android:textSize="@dimen/buttons_finalizar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:drawableRight="@drawable/ic_check_40"/>

</androidx.constraintlayout.widget.ConstraintLayout>