<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".Home.HomeActivity">

    <TextView
        android:id="@+id/txt_title_home"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#263238"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_home"/>

    <Button
        android:id="@+id/btn_novo_medicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/main_cadastrar_medicamento"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_nova_frequencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_home"
        android:background="@drawable/bkg_border"/>

    <Button
        android:id="@+id/btn_nova_frequencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/main_cadastrar_frequencia"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_medicamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_novo_medicamento"/>

    <Button
        android:id="@+id/btn_edit_medicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/main_listar_medicamento"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_frequencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nova_frequencia"
        android:background="@drawable/bkg_border"/>

    <Button
        android:id="@+id/btn_edit_frequencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/main_listar_frequencia"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_medicamento"
        android:background="@drawable/bkg_border"/>

</androidx.constraintlayout.widget.ConstraintLayout>