<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Cruds.CrudFrequenciaActivity">

    <TextView
        android:id="@+id/txt_title_crud_frequencia"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#263238"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_crud_frequencia"/>

    <TextView
        android:id="@+id/txt_subtitle_crud_frequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/crud_frequencia_title"
        android:textSize="@dimen/secondary_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_crud_frequencia" />

    <EditText
        android:id="@+id/input_text_descricao_crud_frequencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle_crud_frequencia"
        android:hint="@string/hint_descricao"
        android:background="@drawable/bkg_border"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_text_descricao_crud_frequencia"
        app:layout_constraintBottom_toTopOf="@+id/btn_finalizar_crud_frequencia">

        <LinearLayout
            android:id="@+id/list_horarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bkg_border_list"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_add_horario"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/txt_horarios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_lista_horarios"
                    android:textSize="30sp"
                    android:layout_marginTop="10px"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <ImageButton
                    android:id="@+id/btn_add_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_add_40"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <!-- Mais itens da lista aqui -->

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_finalizar_crud_frequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_finalizar"
        android:textSize="@dimen/buttons_finalizar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bkg_btn_finalizar"
        android:layout_marginEnd="10dp"
        android:drawableRight="@drawable/ic_check_40"/>

</androidx.constraintlayout.widget.ConstraintLayout>
